fixed wrapping bug

--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -1,7 +1,7 @@
 @import "partials";
 
 .project {
-  margin: 6rem 0;
+  margin: 3rem 0;
   & img {
     display: none;
   }
@@ -33,7 +33,8 @@
 
 @include tablet {
   .project {
-    margin: 8rem 0;
+    margin: 1rem 0 6rem 0;
+
     & p {
       background-color: $lightnavy90;
       border-radius: 1rem;
